trunk/Archive2/70/62491417b9d35f/output
main.cpp: In function 'int main()':
main.cpp:5:34: error: 'endl' was not declared in this scope
     std::cout << "Hallo Welt" << endl;
                                  ^
main.cpp:5:34: note: suggested alternative:
In file included from /usr/local/include/c++/4.9.2/iostream:39:0,
                 from main.cpp:1:
/usr/local/include/c++/4.9.2/ostream:564:5: note:   'std::endl'
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
